Update endpoint to only be for the shared runtime config